# kedro-partitioned

./: .gitignore  .readthedocs.yml  README.md  maskfile.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml  release.yml
docs/: datasets.md  decorators.md
kedro_partitioned/: __init__.py  plugin.py
kedro_partitioned/extras/: __init__.py
kedro_partitioned/extras/datasets/: __init__.py  concatenated_dataset.py  nullable_dataset.py  threaded_partitioned_dataset.py  wrapper_dataset.py
kedro_partitioned/io/: __init__.py  path_safe_partitioned_dataset.py
kedro_partitioned/pipeline/: __init__.py  multinode.py
kedro_partitioned/pipeline/decorators/: __init__.py  decorators.py  helper_factory.py
kedro_partitioned/utils/: __init__.py  constants.py  iterable.py  other.py  pipeline.py  string.py  typing.py
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
tests/: conftest.py
tests/extras/datasets/: mocked_dataset.py  test_concatened_dataset.py  test_threaded_partitioned_dataset.py
