[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "kedro-partitioned"
description = 'Kedro plugin extending partitioned dataset support.'
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Nickolas da Rocha Machado", email = "nickolasrochamachado@gmail.com" },
    { name = "Gabriel Daiha Alves" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.entry-points."kedro.hooks"]
multinode_enabler = "kedro_partitioned.plugins:multinode_enabler"

[tool.setuptools.dynamic]
version = { attr = "kedro_partitioned.__version__" }
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["kedro_partitioned*"]
exclude = ["docs", "tests"]

[tool.pytest.ini_options]
addopts = """
tests kedro_partitioned \
--disable-warnings \
--capture=tee-sys \
--doctest-modules \
--cov-report term-missing \
--cov-report xml \
--cov-report html \
--junitxml=junit/test-results.xml \
--cov kedro_partitioned -ra"""

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
fail_under = 0
show_missing = true
